refactor(persistence): migra a camada de dados de arquivos para JPA/Hibernate
Esta grande refatoração substitui o mecanismo de persistência baseado em arquivos de texto por uma solução mais robusta e escalável, utilizando JPA (Jakarta Persistence API) e Hibernate como implementação. A aplicação agora interage com um banco de dados relacional (configurado para PostgreSQL) em vez de arquivos .txt individuais.